Padronizando o documento segundo o template da disciplina

--- a/conteudo/commit_log.tex
+++ b/conteudo/commit_log.tex
@@ -26,4 +26,5 @@
 \endlastfoot
 
 \hline 0  & Rafael Fazzolino & 2015-08-25 & Criando documento & 32 & 3237 & 0 \\
+\hline 1  & Rafael Fazzolino & 2015-08-25 & Configurando histórico de versões automático & 7 & 80 & 22 \\
 \end{longtable}
