--- a/conteudo/conteudo.tex
+++ b/conteudo/conteudo.tex
@@ -2,3 +2,28 @@
 \label{sec:introdu_o}
 \input{conteudo/introducao} 
 % section introdu_o (end)
+
+\section{Fundamentação Teórica} % (fold)
+\label{sec:fundamentacao}
+\input{conteudo/fundamentacao_teorica} 
+% section fundamentacao (end)
+
+\section{Metodologia de Pesquisa} % (fold)
+\label{sec:metodologia}
+\input{conteudo/metodologia_pesquisa} 
+% section metodologia (end)
+
+\section{Equipe} % (fold)
+\label{sec:equipe}
+\input{conteudo/equipe} 
+% section equipe (end)
+
+\section{Produtos, Atividades e Cronograma} % (fold)
+\label{sec:produtos}
+\input{conteudo/produtos_atividades} 
+% section equipe (end)
+
+\section{Resultados Esperados} % (fold)
+\label{sec:resultados_esperados}
+\input{conteudo/resultados_esperados} 
+% section resultados (end)
