--- a/conteudo/introducao.tex
+++ b/conteudo/introducao.tex
@@ -1,1 +1,35 @@
-COLOCAR INTRODUÇÃO AQUI
+\subsection{Contexto}
+
+	[Descrever o objeto de estudo, o tema e portanto, o problema a ser resolvido. Apresentar genericamente o problema e o contexto a que está inserido. Essa descrição deve situar o problema que será investigado e sua inter-relação com o contexto em que está inserido.]
+
+\subsection{Formulação do problema}
+
+	[Responder à questão: QUAIS AS QUESTÕES A SEREM RESOLVIDAS?
+Detalhar o problema citado no Contexto e apresentar as questões específicas que a presente pesquisa pretende responder ou resolver. São as questões a serem solucionadas.]
+
+\subsection{Objetivos}
+
+	[ Responder à questão: O QUE FAZER?
+Apresentar os objetivos como Objetivo Geral e Objetivos específicos.
+
+Objetivo Geral: o que se pretende atingir / alcançar com a pesquisa
+
+Objetivos específicos: São etapas do trabalho para se alcançar / atingir o objetivo geral. Utilizar verbos no infinitivo para descrever tais objetivos específicos.
+
+Exploratórios (conhecer, identificar, levantar, descobrir)
+
+Descritivos (caracterizar, descrever, traçar, determinar, definir)
+
+Explicativos (analisar, avaliar, verificar, explicar, validar)   ]
+
+\subsection{Justificativas}
+
+	[Basicamente, essa seção deve responder à seguinte questão: POR QUE FAZER?
+As justificativas consistem em uma descrição e argumentações sobre as razões e motivações da escolha do tema de projeto em questão, de maneira a esclarecer as razões pelas quais o presente projeto é importante.
+Essa descrição/argumentação deve indicar:
+
+A importância do tema a ser investigado.
+
+As possíveis contribuições do projeto.
+
+Relação do tema com outras pesquisas.
